deploy/ingress/kn2-dev-search-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
       add_header Allow "GET, POST, HEAD" always;
        if ( $request_method !~ ^(GET|POST|HEAD|OPTIONS)$ ) {
            return 405;
        }
        location ~ ^/(datasets30|regions17)/(?!_search) {
           return 405;
        }
        location ~ ^/_cat/(?!indices) {
           return 405;
        }
spec:
  rules:
    - host: kn-v2-dev-es.oznome.csiro.au
      http:
        paths:
        - path: /
          backend:
            serviceName: elasticsearch
            servicePort: 9200
  tls:
   - secretName: oznome-tls-secret
     hosts:
     - kn-v2-dev-es.oznome.csiro.au
