deploy/ingress/kn2-prod-es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kn-es-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
       set $agentflag 0;

       if ($http_user_agent ~* "(Mobile)" ){
          set $agentflag 1;
       }

       if ( $agentflag = 1 ) {
          return 301 https://m.example.com;
       }
       add_header Allow "GET, POST, HEAD" always;
        if ( $request_method !~ ^(GET|POST|HEAD|OPTIONS)$ ) {
            return 405;
        }
        location ~ ^/(?!(datasets30|regions17|datasets32|regions21)) {
           return 405;
        }
        location ~ ^/(datasets30|regions17|datasets32|regions21)/(?!(_search|_mapping)) {
           return 405;
        }
        location ~ ^/_cat/(?!indices) {
           return 405;
        }
spec:
  rules:
    - host: es.knowledgenet.co
      http:
        paths:
        - path: /
          backend:
            serviceName: elasticsearch
            servicePort: 9200
  tls:
   - secretName: kn-tls-secret
     hosts:
     - es.knowledgenet.co
